[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_awcloud-cpanel"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.1"
replit = "^3.2.4"
requests = "*"
grequests = "^0.6.0"
cloudscraper = "^1.2.58"
PySocks = "^1.7.1"
Flask = "^2.0.2"
[tool.poetry.dev-dependencies]
